Fix heading button spacing

--- a/style.css
+++ b/style.css
@@ -53,10 +53,11 @@ ul.navbar {
 .heading-below-nav > * :not(.main-heading-img) {
     display: flex;
     flex-direction: column;
-    margin: .4rem 1rem;
+    margin: .4rem 2.25rem 1rem 0rem;
 }
 
 div.main-heading-text > button {
+    display: inline-block;
     padding: .5rem 2rem;
     border-radius: .6rem;
     border-color: #3882F6;
